--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<body style="background-color:rgb(92, 244, 123);"></body>
+<body style="background-color:rgb(165, 243, 255);"></body>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 4</title>
 </head>
-<h1 style="color: white;">Homework 5</h1>
-<h1 style="color: white;">Chandler Lugo</h1>
-<h2 style="color: white;"> Check console.log for "myData" !</h2>
+<h1 style="color: black;">Homework 5</h1>
+<h1 style="color: black;">Chandler Lugo</h1>
+<h2 style="color: black;"> Check console.log for "myData" !</h2>
 
 
 <script src = "myData.js">
