--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <h1 style="color: black;">Homework 5</h1>
 <h1 style="color: black;">Chandler Lugo</h1>
-<h2 style="color: black;"> Check console.log for "myData" !</h2>
+<h2 style="color: black;"> </h2>
 
 
 <script src = "myData.js">
